--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,5 @@
 @layer base, component, page;
+@import './_base.css';
+@import './styles/container.css';
+@import './styles/header.css';
+@import "./styles/buttons.css"
