feat: add homepage

--- a/src/_base.css
+++ b/src/_base.css
@@ -17,6 +17,9 @@
     input {
         all: unset;
     }
+    h2 {
+        margin: 0;
+    }
 
     input, textarea, button, select {
         font: inherit;
