--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,8 @@
 @layer base, component, page;
-@import './_base.css';
-@import './styles/container.css';
-@import './styles/header.css';
-@import "./styles/buttons.css"
+@import "./_base.css";
+@import "./styles/container.css";
+@import "./styles/header.css";
+@import "./styles/buttons.css";
+@import "./styles/home.css";
+@import "./styles/typography.css";
+@import "./styles/embla.css";
