--- a/src/_base.css
+++ b/src/_base.css
@@ -17,10 +17,12 @@
     input {
         all: unset;
     }
-    h2 {
+    h1, h2 {
         margin: 0;
     }
-
+    ul, li {
+        all: unset;
+    }
     input, textarea, button, select {
         font: inherit;
     }
