--- a/src/styles/container.css
+++ b/src/styles/container.css
@@ -2,7 +2,7 @@
     .container {
         margin-inline: auto;
         padding-inline: 20px;
-        width: calc(100vw - 200px);
+        width: max(calc(100vw - 200px), 1000px);
         max-width: 1920px;
     }
 }
