refactor: sort code from home.css to respective css files

--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,5 @@
 @import "./styles/typography.css";
 @import "./styles/embla.css";
 @import "./styles/dropdown.css";
+@import "./styles/home-intro.css";
+@import "./styles/reviews.css";
