--- a/src/styles/container.css
+++ b/src/styles/container.css
@@ -3,6 +3,6 @@
         margin-inline: auto;
         padding-inline: 20px;
         width: max(calc(100vw - 200px), 1000px);
-        max-width: 1920px;
+        max-width: min(1920px, 100vw);
     }
 }
