--- a/src/styles/buttons.css
+++ b/src/styles/buttons.css
@@ -8,6 +8,11 @@
     color: white;
     background-color: black;
   }
+  .btn-white {
+    color: black;
+    background-color: transparent;
+    border: 1px solid #a5a5a5;
+  }
   .btn-search {
     width: 24px;
     height: 24px;
