feat: add footer component

--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,4 @@
 @import "./styles/dropdown.css";
 @import "./styles/home-intro.css";
 @import "./styles/reviews.css";
+@import "./styles/footer.css";
