--- a/src/index.css
+++ b/src/index.css
@@ -10,3 +10,4 @@
 @import "./styles/home-intro.css";
 @import "./styles/reviews.css";
 @import "./styles/footer.css";
+@import "./Fonts/WEB/css/satoshi.css";
