--- a/src/styles/typography.css
+++ b/src/styles/typography.css
@@ -9,13 +9,14 @@
 
   .title {
     font-size: 	2.5rem;
-    font-weight: 800;
+    font-weight: 900;
     letter-spacing: -1px;
+    text-transform: uppercase;
   }
 
   .title--sm {
     font-size: 1.125rem;
-    font-weight: 700;
+    font-weight: 900;
     line-height: 1.06;
   }
 
