--- a/src/_base.css
+++ b/src/_base.css
@@ -17,8 +17,11 @@
     input {
         all: unset;
     }
-    h1, h2, h3, h4 {
+    h1, h2, h4 {
         font-family: Integral-CF, system-ui;
+        margin: 0;
+    }
+    h3 {
         margin: 0;
     }
     ul, li {
