--- a/src/styles/typography.css
+++ b/src/styles/typography.css
@@ -5,19 +5,19 @@
     font-weight: 800;
     line-height: 1.05;
     letter-spacing: -1.5px;
+    font-style: Integral-CF;
   }
 
   .title {
     font-size: 	2.5rem;
     font-weight: 900;
-    letter-spacing: -1px;
-    text-transform: uppercase;
+    
   }
 
   .title--sm {
     font-size: 1.125rem;
-    font-weight: 900;
     line-height: 1.06;
+    margin-block: 10px;
   }
 
   /* Texts */
