feat: add letter-spacing to footer titles

--- a/src/styles/typography.css
+++ b/src/styles/typography.css
@@ -20,6 +20,11 @@
     margin-block: 10px;
   }
 
+  .title--spaced {
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    font-weight: 500;
+  }
   /* Texts */
 
   .text--xl {
