--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -50,6 +50,7 @@
     justify-content: space-between;
     padding-inline: 80px;
     padding-block: 30px;
+    width: max(calc(100vw - 240px), 960px);
   }
 
   .subscribe-form {
