--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -57,6 +57,7 @@
     margin-top: 50px;
     padding-top: 10px;
     padding-bottom: 30px;
+    padding-inline: 100px;
     background-color: #F0F0F0;
     border-radius: 30px;
   }
