--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -35,5 +35,11 @@
     display: flex;
     align-items: center;
   }
+
+  @media (max-width: 1060px) {
+    .flex-form, .flex-categories {
+      display: none;
+    }
+  }
 }
 
