--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -23,7 +23,8 @@
     padding: 5px;
   }
   .footer-links {
-    display: flex;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
     flex: 3;
     align-items: center;
   }
@@ -69,7 +70,25 @@
     width: 250px;
     color: black;
     background-color: white;
-   
   }
   
+  @media (max-width: 1060px) {
+    .flex-footer {
+      flex-direction: column;
+    }
+    
+    .subscribe-container {
+      flex-direction: column;
+      align-items: center;
+      padding-block: 30px;
+      width: min(90vw, 400px);
+    }
+  }
+
+  @media (max-width: 760px) {
+    .footer-links {
+      grid-template-columns: 1fr 1fr;
+      grid-row-gap: 40px;
+    }
+}
 }
