--- a/src/styles/home-intro.css
+++ b/src/styles/home-intro.css
@@ -14,6 +14,8 @@
 
   .img-brand {
     color: white;
+    height: auto;
+    width: max(8vw, 80px);
   }
 
   .company-stats-flex {
@@ -30,10 +32,31 @@
   }
   .brand-breakline {
     background-color: black;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+    display: grid;
+    place-items: center;
+    grid-template-columns: repeat(5, 1fr);
     padding-inline: 60px;
     padding-block: 30px;
+    column-gap: 20px;
+    max-width: 100vw;
+  }
+
+  @media (max-width: 1060px) {
+    .brand-breakline {
+      grid-template-columns: 1fr 1fr 1fr;
+      row-gap: 20px; 
+    }
+    .brand-breakline > .img-brand:nth-child(4) {
+      grid-row: 2;
+      grid-column: 2 / 4;
+    }
+    .brand-breakline > .img-brand:nth-child(5) {
+      grid-row: 2;
+      grid-column: 1 / 3;
+    }
+  }
+
+  @media (max-width: 760px) {
+    
   }
 }
