--- a/src/styles/home-intro.css
+++ b/src/styles/home-intro.css
@@ -1,15 +1,22 @@
 @layer component {
+  .flex-home {
+    display: flex;
+    height: max(80vh, 100px);
+    margin-top: 50px;
+  }
+  
   .home-intro-description {
-    width: 50%;
+    width: 100%;
+    height: 100%;
     padding-right: 20px;
   }
   .intro-bg {
-    background-image: url("/introImage.jpg");
-
+    background-image: url("/introImageCompressed.jfif");
     background-size: cover;
     background-repeat: no-repeat;
-
-    width: 50%;
+    background-position: top;
+    width: 100%;
+    height: 100%;
   }
 
   .img-brand {
@@ -44,7 +51,7 @@
   @media (max-width: 1060px) {
     .brand-breakline {
       grid-template-columns: 1fr 1fr 1fr;
-      row-gap: 20px; 
+      row-gap: 20px;
     }
     .brand-breakline > .img-brand:nth-child(4) {
       grid-row: 2;
@@ -57,6 +64,12 @@
   }
 
   @media (max-width: 760px) {
-    
+    .flex-home {
+      flex-direction: column;
+      height: 1000px;
+    }
+    .intro-bg {
+     
+    }
   }
 }
