--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -81,6 +81,7 @@
       flex-direction: column;
       align-items: center;
       padding-block: 30px;
+      padding-inline: 20px;
       width: min(90vw, 400px);
     }
   }
