--- a/src/styles/home-intro.css
+++ b/src/styles/home-intro.css
@@ -4,10 +4,10 @@
     height: max(80vh, 100px);
     margin-top: 50px;
   }
-  
+
   .home-intro-description {
     width: 100%;
-    height: 100%;
+    height: auto;
     padding-right: 20px;
   }
   .intro-bg {
@@ -48,6 +48,7 @@
     max-width: 100vw;
   }
 
+  
   @media (max-width: 1060px) {
     .brand-breakline {
       grid-template-columns: 1fr 1fr 1fr;
@@ -55,21 +56,20 @@
     }
     .brand-breakline > .img-brand:nth-child(4) {
       grid-row: 2;
-      grid-column: 2 / 4;
+      grid-column: 1 / 3;
     }
     .brand-breakline > .img-brand:nth-child(5) {
       grid-row: 2;
-      grid-column: 1 / 3;
+      grid-column: 2 / 4;
     }
   }
+
 
   @media (max-width: 760px) {
     .flex-home {
       flex-direction: column;
       height: 1000px;
-    }
-    .intro-bg {
-     
+      gap: 20px;
     }
   }
 }
