--- a/src/styles/typography.css
+++ b/src/styles/typography.css
@@ -71,4 +71,15 @@
       font-size: 2rem;
     }
   }
+  @media (max-width: 760px) {
+    .title--lg {
+      font-size: 2.5rem;
+    }
+    .title {
+      font-size: 1.5rem;
+    }
+    .text--xl {
+      font-size: 1.5rem;
+    }
+  }
 }
