feat: add bg color to body and fix header accordingly

--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,7 +1,12 @@
 @layer component {
     .header {
        position: relative;
-       margin-top: 20px;
+       padding-top: 20px;
+       padding-bottom: 20px;
+       
+    }
+    .header-bg {
+      background-color: #FFFFFF;
     }
   .flex-header {
     display: flex;
