--- a/src/_base.css
+++ b/src/_base.css
@@ -1,6 +1,7 @@
 @layer base {
     :root {
         --footer-subscribe-height: 160px;
+        --background-color: #F2F0F1;
     }
 
     *,
@@ -12,6 +13,7 @@
     body {
         font-family: Satoshi, system-ui;
         margin: 0;
+        background-color: var(--background-color);
     }
 
     input {
