--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,10 +1,5 @@
 @layer component {
-  .flex-home {
-    display: flex;
-    height: max(80vh, 100px);
-    margin-top: 50px;
-  }
-
+  
   .home-category {
     margin-block: 10px;
     display: flex;
@@ -58,7 +53,7 @@
     padding-top: 10px;
     padding-bottom: 30px;
     padding-inline: 100px;
-    background-color: #F0F0F0;
+    background-color: #e3e3e3;
     border-radius: 30px;
   }
 }
