fix: footer bg color

--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -6,7 +6,7 @@
   }
   .footer-container {
     margin-top: 200px;
-    background-color: #f1f1f1;
+    background-color: #e3e3e3;
     padding-bottom: 50px;
     position: relative;
     padding-top: 150px;
