--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -2,7 +2,7 @@
   .flex-footer {
     display: flex;
     gap: 50px;
-   
+    padding-top: 20px;
   }
   .footer-container {
     margin-top: 200px;
@@ -29,7 +29,10 @@
     align-items: center;
   }
   .links-container {
+    padding-inline: 5px;
     flex: 1;
+    width: 100%;
+    height: 100%;
   }
   .links-list {
     display: flex;
