--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,5 +1,4 @@
 @layer component {
-  
   .home-category {
     margin-block: 10px;
     display: flex;
@@ -11,6 +10,13 @@
   .home-category:first-child {
     margin-top: 60px;
   }
+  .product-flex {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    max-width: 300px;
+    max-height: 500px;
+  }
   .items-line {
     display: flex;
     justify-content: space-between;
@@ -18,15 +24,22 @@
     gap: 20px;
   }
   .items-line-img {
-    width: 100%;
-    height: auto;
+    max-width: 300px;
+    max-height: 300px;
+    width: 20vw;
+    height: 20vw;
     border-radius: 20px;
+  }
+  .category-product-title {
+    width: 20vw;
+  }
+  .category-product-price {
+    margin-top: auto;
   }
   .category-hr {
     border: none;
     height: 1px;
     background-color: #d3d3d3;
-    
   }
   .category-heading {
     margin-block: 30px;
@@ -68,6 +81,14 @@
     .grid-category-squares {
       grid-template-columns: 1fr 1fr;
       grid-template-rows: 1fr 1fr;
+      place-items: center;
+    }
+    .items-line-img {
+      width: 40vw;
+      height: 40vw;
+    }
+    .category-product-title {
+      width: 100%;
     }
   }
 }
