feat: add responsiveness to the Reviews component

--- a/src/styles/reviews.css
+++ b/src/styles/reviews.css
@@ -39,4 +39,10 @@
   .heading-carousel {
     text-transform: uppercase;
   }
+
+  @media (max-width: 760px) {
+    .review-card {
+      width: 100%;
+    }
+  }
 }
