--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -46,7 +46,7 @@
     padding-block: 10px;
     background-color: #f0f0f0;
   }
-  .search-mobile {
+  .btn-search-mobile {
     display: none;
   }
   .profile-btn-flex {
@@ -73,9 +73,6 @@
   }
 
   .mobile-search {
-    position: relative;
-    top: 50px;
-    height: 0;
     display: flex;
     align-items: center;
     gap: 5px;
@@ -85,11 +82,58 @@
     text-align: right;
     padding: 8px;
   }
+
+  .mobile-hamburger-container {
+    background-color: var(--background-color);
+    width: 320px;
+    height: 100vh;
+    position: fixed;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    translate: -320px;
+    padding-inline: 30px;
+    transition: translate 0.3s;
+    overflow-x: hidden;
+    overflow-y: scroll; 
+    overscroll-behavior: contain;
+    z-index: 200;
+  }
+  .mobile-hamburger-container.opened {
+    translate: 0px;
+  }
+
+  .flex-categories-mobile {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .outside-hamburger-click-close {
+    visibility: hidden;
+    position: fixed;
+    right: 0;
+    left: 0;
+    top: 0;
+    height: 100vh;
+    width: 0;
+    z-index: 199;
+    transition: backdrop-filter 1s, background-color 1s;
+  }
+  .outside-hamburger-click-close.opened {
+    width: 100vw;
+    visibility: initial;
+    backdrop-filter: blur(2px);
+    background-color: hsla(0,0%,7%,.36);
+  }
+
+  /* ---------------media queries--------------- */
+
   @media (max-width: 1060px) {
     .flex-form {
       display: none;
     }
-    .search-mobile {
+    .btn-search-mobile {
       display: initial;
     }
   }
