--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -95,9 +95,11 @@
     padding-inline: 30px;
     transition: translate 0.3s;
     overflow-x: hidden;
-    overflow-y: scroll; 
+    overflow-y: scroll;
     overscroll-behavior: contain;
     z-index: 200;
+    text-align: right;
+    padding: 20px;
   }
   .mobile-hamburger-container.opened {
     translate: 0px;
@@ -108,6 +110,13 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+  }
+  .flex-categories-mobile > li {
+    width: 100%;
+    text-align: center;
+  }
+  .flex-categories-mobile > li:not(:last-child) {
+    border-bottom: 1px solid #cfcfcf;
   }
   .outside-hamburger-click-close {
     visibility: hidden;
@@ -124,7 +133,7 @@
     width: 100vw;
     visibility: initial;
     backdrop-filter: blur(2px);
-    background-color: hsla(0,0%,7%,.36);
+    background-color: hsla(0, 0%, 7%, 0.36);
   }
 
   /* ---------------media queries--------------- */
