--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 @layer base, component, page;
 @import "./_base.css";
 @import "./styles/container.css";
+@import "./Fonts/WEB/css/satoshi.css";
 @import "./styles/header.css";
 @import "./styles/buttons.css";
 @import "./styles/home/home.css";
@@ -10,4 +11,4 @@
 @import "./styles/home/home-intro.css";
 @import "./styles/reviews.css";
 @import "./styles/footer.css";
-@import "./Fonts/WEB/css/satoshi.css";
+@import "./styles/products/products.css";
