--- a/src/styles/products/products.css
+++ b/src/styles/products/products.css
@@ -1,34 +1,51 @@
 @layer component {
-    .products-container-grid {
-        display: grid;
-        grid-template-columns: 1fr 3fr;
-    }
-    .products-list {
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        row-gap: 20px;
-    }
-    .filters-container {
-        width: 100%;
-        padding: 20px 10px;
-        display: flex;
-        flex-direction: column;
-    }
-    .filter-categories {
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-        gap: 5px;
-    }
-    .filter-price {
-        display: flex;
-    }
-    
-    .range-min {
-        
-    }
-    .range-max {
-       
-    }
-    
+  .products-container-grid {
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+  }
+  .products-list {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    row-gap: 20px;
+  }
+  .filters-container {
+    width: 100%;
+    padding: 20px 10px;
+    display: flex;
+    flex-direction: column;
+  }
+  .filter-categories {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+  }
+  .filter-price {
+    display: flex;
+    margin-block: 20px;
+    flex-direction: column;
+  }
+  .filter-price-num {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 20px;
+  }
+  .filter-price-num-input {
+    width: 5ch;
+    padding: 5px 10px;
+    border: 1px solid rgb(212, 212, 212);
+    border-radius: 3px;
+    text-align: center;
+  }
+
+  .range-slider {
+    width: 100%;
+  }
+
+  .range-slider .range-slider__range {
+    background: black;
+  }
+  .range-slider .range-slider__thumb {
+    background: black;
+  }
 }
