--- a/src/styles/products/products.css
+++ b/src/styles/products/products.css
@@ -2,6 +2,7 @@
   .products-container-grid {
     display: grid;
     grid-template-columns: 1fr 3fr;
+    gap: 20px;
   }
   .products-list {
     display: grid;
@@ -13,6 +14,7 @@
     padding: 20px 10px;
     display: flex;
     flex-direction: column;
+    gap: 10px;
   }
   .filter-categories {
     width: 100%;
@@ -48,4 +50,23 @@
   .range-slider .range-slider__thumb {
     background: black;
   }
+
+  .sizes-list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    
+    gap: 5px;
+
+  }
+  .size-active {
+    background-color: black;
+    color: white;
+    opacity: 1;
+  }
+  .filter-apply {
+    margin-top: 20px;
+  }
 }
+
+
