--- a/src/styles/products/products.css
+++ b/src/styles/products/products.css
@@ -3,18 +3,68 @@
     display: grid;
     grid-template-columns: 1fr 3fr;
     gap: 20px;
+    padding-top: 20px;
   }
   .products-list {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     row-gap: 20px;
   }
+  .products-heading {
+    display: flex;
+    justify-content: space-between;
+  }
+  .products-sort {
+    display: flex;
+    gap: 10px;
+    align-items: center;
+  }
+  .dropdown-sort-container {
+    width: 120px;
+    display: grid;
+    place-items: center;
+    position: relative;
+  }
+  .dropdown-sort {
+    position: absolute;
+    right: 0;
+    top: 100%;
+    display: none;
+    background-color: white;
+    border-radius: 9px;
+    width: 120px;
+  }
+  .dropdown-sort.open {
+    display: initial;
+  }
+  .dropdown-sort-list {
+    display: flex;
+    flex-direction: column;
+
+  }
+  .dropdown-sort-list > li:first-child,
+  .dropdown-sort-list > li:last-child {
+    border-radius: 9px;
+  }
+  .dropdown-sort-list > li:hover {
+    background-color: rgb(240, 240, 240);
+  }
   .filters-container {
     width: 100%;
-    padding: 20px 10px;
+    padding: 10px;
     display: flex;
     flex-direction: column;
     gap: 10px;
+    border: 1px solid var(--background-color);
+    border-radius: 9px;
+  }
+  .filters-heading {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .filters-heading > button {
+    cursor: default;
   }
   .filter-categories {
     width: 100%;
@@ -55,9 +105,8 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    
-    gap: 5px;
 
+    gap: 5px;
   }
   .size-active {
     background-color: black;
@@ -68,5 +117,3 @@
     margin-top: 20px;
   }
 }
-
-
