--- a/src/_base.css
+++ b/src/_base.css
@@ -13,7 +13,7 @@
     body {
         font-family: Satoshi, system-ui;
         margin: 0;
-        background-color: var(--background-color);
+        
     }
 
     .sr-only {
@@ -40,7 +40,7 @@
     h3 {
         margin: 0;
     }
-    ul, li {
+    ul, li, ol {
         all: unset;
     }
     input, textarea, button, select {
