--- a/src/styles/typography.css
+++ b/src/styles/typography.css
@@ -5,7 +5,7 @@
     font-weight: 800;
     line-height: 1.05;
     letter-spacing: -1.5px;
-    font-style: Integral-CF;
+    font-family: Integral-CF;
   }
 
   .title {
