--- a/src/styles/products/products.css
+++ b/src/styles/products/products.css
@@ -4,13 +4,11 @@
     padding-bottom: 200px;
     font-family: Satoshi, system-ui;
   }
-  .products-page h1,h2,h3 {
+  .products-page h1,
+  h2,
+  h3 {
     font-family: Satoshi, system-ui;
   }
-  
-}
-
-@layer component {
   .products-container-grid {
     display: grid;
     grid-template-columns: 1fr 3fr;
@@ -36,6 +34,9 @@
     display: grid;
     place-items: center;
     position: relative;
+  }
+  .fa-chevron-down {
+    padding-inline: 5px;
   }
   .dropdown-sort {
     position: absolute;
