fix: font-family in footer

--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -4,13 +4,10 @@
     gap: 50px;
     padding-top: 20px;
   }
-  .flex-footer h1,
-  h2,
-  h3,
-  h4,
-  h5 {
-    font-family: Integral-CF, system-ui;
+  .flex-footer h3 {
+    font-family: satoshi, system-ui;
   }
+  
   .footer-container {
     background-color: #e3e3e3;
     padding-bottom: 50px;
