--- a/src/styles/products/filter.css
+++ b/src/styles/products/filter.css
@@ -52,7 +52,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-
+    margin-top: 10px;
     gap: 5px;
   }
   .size-active {
@@ -62,6 +62,8 @@
   }
   .filter-apply {
     margin-top: 20px;
+    width: 100%;
+    align-self: center;
   }
   
   @media (max-width: 1060px) {
