refactor: FiltersSidebar choose size buttons to Component and import it to ProductDescription

--- a/src/_base.css
+++ b/src/_base.css
@@ -15,7 +15,9 @@
         margin: 0;
         
     }
-
+    main {
+        min-height: 500px;
+    }
     .sr-only {
         border: 0 !important;
         clip: rect(1px, 1px, 1px, 1px) !important; /* 1 */
