--- a/src/index.css
+++ b/src/index.css
@@ -14,4 +14,5 @@
 @import "./styles/products/products.css";
 @import "./styles/products/filter.css";
 @import "./styles/products/path.css";
+@import "./styles/products/product.css";
 @import "react-range-slider-input/dist/style.css";
