--- a/src/styles/products/product.css
+++ b/src/styles/products/product.css
@@ -1,27 +1,41 @@
 @layer component {
-    .product-container {
-        display: flex;
-        justify-content: space-between;
-        gap: 10px;
-    }
-    .gallery {
-        flex: 1;
-        display: flex;
-    }
-    .product-info {
-        flex: 1;
-    }
-    .gallery-thumbnails {
-        display: flex;
-        flex-direction: column;
-        order: -1;
-    }
-    .main-thumbnail {
-        height: 300px;
-        width: auto;
-    }
-    .small-thumbnail {
-        height: 100px;
-        width: auto;
-    }
+  .product-container {
+    display: flex;
+    justify-content: space-between;
+    gap: 30px;
+  }
+  .gallery {
+    flex: 1;
+    display: flex;
+    gap: 10px;
+  }
+  .product-info {
+    flex: 1;
+  }
+  .thumbnails-gallery {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    order: -1;
+  }
+  .thumbnail-main {
+    width: 400px;
+    height: 530px;
+    border-radius: 9px;
+    object-fit: cover;
+  }
+  .thumbnail-small {
+    width: 150px;
+    height: 150px;
+
+    border-radius: 9px;
+  }
+  .thumbnail-button {
+    width: 150px;
+    height: 150px;
+    border-radius: 9px;
+  }
+  .active-thumbnail {
+    border: 1px solid black;
+  }
 }
