--- a/src/styles/typography.css
+++ b/src/styles/typography.css
@@ -52,6 +52,9 @@
     font-weight: normal;
     line-height: 1.77;
   }
+  .text--xs {
+    font-size: 0.75rem;
+  }
   .text--gray {
     opacity: 70%;
   }
