feat: add price and description to ProductDescription

--- a/src/styles/reviews.css
+++ b/src/styles/reviews.css
@@ -20,7 +20,7 @@
     margin-block: 5px;
   }
   .fa-star,
-  .fa-solid {
+  .fa-star-half-stroke {
     color: orange;
     padding-inline: 2px;
   }
