style: make a hr border-color variable and replace hand-written values with it

--- a/src/_base.css
+++ b/src/_base.css
@@ -2,6 +2,7 @@
     :root {
         --footer-subscribe-height: 160px;
         --background-color: #F2F0F1;
+        --hr-border-color: #d3d3d3;
     }
 
     *,
