--- a/src/styles/buttons.css
+++ b/src/styles/buttons.css
@@ -31,7 +31,13 @@
     width: 24px;
     height: 24px;
   }
+  
+  .btn-center {
+    display: block;
+    margin-inline: auto;
+    margin-top: 20px;
 
+  }
   .btn-profile {
     margin-inline: 5px;
   }
