--- a/src/styles/reviews.css
+++ b/src/styles/reviews.css
@@ -4,16 +4,12 @@
   }
 
   .review-card {
-    width: 400px;
+    width: 100%;
     height: 240px;
     border: 1px rgb(204, 204, 204) solid;
     border-radius: 15px;
     padding-inline: 20px;
     padding-block: 10px;
-    flex-shrink: 0;
-  }
-  .review-card:not(:first-child) {
-    margin-left: 20px;
   }
 
   .rating {
@@ -43,9 +39,19 @@
   .heading-carousel {
     text-transform: uppercase;
   }
+  .review-wrapper {
+    width: 400px;
+    flex-shrink: 0;
+  }
+  .review-wrapper:not(:first-child) {
+    margin-left: 20px;
+  }
+  .long-review-wrapper {
+    width: 100%;
+  }
 
   @media (max-width: 760px) {
-    .review-card {
+    .review-wrapper {
       width: 100%;
     }
   }
