--- a/src/styles/products/gallery.css
+++ b/src/styles/products/gallery.css
@@ -1,33 +1,32 @@
 @layer component {
-    .gallery {
-        flex: 1;
-        display: flex;
-        gap: 10px;
-      }
-    .thumbnails-gallery {
-        display: flex;
-        flex-direction: column;
-        gap: 10px;
-        order: -1;
-      }
-      .thumbnail-main {
-        width: 400px;
-        height: 530px;
-        border-radius: 9px;
-        object-fit: cover;
-      }
-      .thumbnail-small {
-        width: 150px;
-        height: 150px;
-    
-        border-radius: 9px;
-      }
-      .thumbnail-button {
-        width: 150px;
-        height: 150px;
-        border-radius: 9px;
-      }
-      .active-thumbnail {
-        border: 1px solid black;
-      }
+  .gallery {
+    display: flex;
+    gap: 10px;
+  }
+  .thumbnails-gallery {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    order: -1;
+  }
+  .thumbnail-main {
+    width: 400px;
+    height: 530px;
+    border-radius: 9px;
+    object-fit: cover;
+  }
+  .thumbnail-small {
+    width: 100%;
+    height: 100%;
+    border-radius: 9px;
+  }
+  .thumbnail-button {
+    height: 150px;
+    border-radius: 9px;
+    flex: 1;
+    border: 1px solid transparent;
+  }
+  .active-thumbnail {
+    border-color: black;
+  }
 }
