--- a/src/styles/reviews.css
+++ b/src/styles/reviews.css
@@ -5,7 +5,7 @@
 
   .review-card {
     width: 100%;
-    height: 240px;
+    min-height: 240px;
     border: 1px rgb(204, 204, 204) solid;
     border-radius: 15px;
     padding-inline: 20px;
